# shifters

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.shift.toml
ci/: extract-version.yaml  pipeline.yaml  publish.yaml  test.yaml  update-kustomize-tag.yaml  vars.yaml
src/: cli.rs  config.rs  main.rs
tests/: cli.rs
